--- a/web/src/pages/file/file.css
+++ b/web/src/pages/file/file.css
@@ -42,6 +42,12 @@
     background-color: var(--em-color);
 }
 
+.file-name{
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+}
+
 .file-name>.el-checkbox {
     padding-left: 8px;
     padding-right: 8px;
