--- a/web/src/pages/file/file.css
+++ b/web/src/pages/file/file.css
@@ -11,6 +11,14 @@
     padding-left: 12px;
 }
 
+.file-show {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
 .file-option {
     padding: 12px;
     display: flex;
@@ -22,10 +30,10 @@
 
 .file-content {
     position: absolute;
-    top: 130px;
+    top: 30px;
     left: 0;
-    right: 0;
     bottom: 0;
+    width: 1000px;
     overflow: auto;
 }
 
@@ -42,10 +50,10 @@
     background-color: var(--em-color);
 }
 
-.file-name{
-    overflow:hidden;
-    text-overflow:ellipsis;
-    white-space:nowrap;
+.file-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .file-name>.el-checkbox {
@@ -56,14 +64,15 @@
 .file-head {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 2fr 1fr 1.5fr 0.7fr 0.7fr 1.1fr;
+    grid-template-columns: 2fr 1fr 1.5fr;
     height: 30px;
+    width: 1000px;
 }
 
 .file-content-item {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: 2fr 1fr 1.5fr 0.7fr 0.7fr 1.1fr;
+    grid-template-columns: 2fr 1fr 1.5fr;
 }
 
 .file-button {
@@ -80,7 +89,7 @@
     bottom: 0;
 }
 
-#file-menu {
+.my-menu {
     display: none;
     background-color: var(--bg-color);
     position: absolute;
@@ -88,13 +97,13 @@
     border-radius: 5px;
 }
 
-#file-menu>div {
+.my-menu>div {
     padding: 3px 10px;
     color: var(--text-color);
     font-size: 14px;
 }
 
-#file-menu>div:hover {
+.my-menu>div:hover {
     background-color: var(--em-color);
     border-radius: 5px;
     user-select: none;
