--- a/web/src/main.css
+++ b/web/src/main.css
@@ -86,7 +86,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: var(--main-color);
+    background-color: var(--em-color);
     background-image: -webkit-linear-gradient( 45deg, rgba(255, 255, 255, 0.1) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
 }
 
